[package]
name = "libfj"
version = "0.4.1"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
edition = "2018"
description = "An unofficial collection of APIs used in FreeJam games and mods"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"]}
serde_json = "^1"
reqwest = { version = "^0.11", features = ["json"]}
url = "^2.2"
ureq = { version = "^2", features = ["json"], optional = true}
base64 = "^0.13"
num_enum = "^0.5"

[dev-dependencies]
tokio = { version = "1.4.0", features = ["macros"]}

[features]
simple = ["ureq"]
