[package]
name = "libfj"
version = "0.7.1"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
edition = "2018"
description = "An unofficial collection of APIs used in FreeJam games and mods"
license = "MIT"
homepage = "https://github.com/NGnius/libfj"
repository = "https://github.com/NGnius/libfj"
readme = "README.md"
exclude = [
    "test.sh",
    "**/*.out.Techblox"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"]}
serde_json = "^1"
reqwest = { version = "^0.11", features = ["json", "rustls-tls"], optional = true, default-features=false}
url = "^2.2"
ureq = { version = "^2", features = ["json"], optional = true}
async-trait = { version = "0.1", optional = true }
base64 = "^0.13"
num_enum = "^0.5"
chrono = {version = "^0.4", optional = true}
highhash = {version = "^0.1", optional = true}
half = {version = "^1.7", optional = true}
libfj_parsable_macro_derive = {version = "0.5.3", optional = true}
#libfj_parsable_macro_derive = {path = "./parsable_macro_derive", optional = true}
obj = {version = "^0.10", optional = true}
genmesh = {version = "^0.6", optional = true}
cgmath = {version = "^0.18", optional = true}

[dev-dependencies]
tokio = { version = "1.4.0", features = ["macros"]}

[features]
all = ["simple", "robocraft", "cardlife", "techblox", "convert", "robocraft2"]
default = ["all"]
simple = ["ureq"]
robocraft = ["reqwest", "ureq"]
cardlife = ["reqwest"]
techblox = ["chrono", "highhash", "half", "libfj_parsable_macro_derive"]
convert = ["obj", "genmesh", "cgmath"]
robocraft2 = ["reqwest", "async-trait", "chrono"]
