[package]
name = "libfj_parsable_macro_derive"
version = "0.5.3"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
edition = "2018"
description = "An unofficial collection of APIs used in FreeJam games and mods"
license = "MIT"
homepage = "https://github.com/NGnius/libfj"
repository = "https://github.com/NGnius/libfj"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
